# bigquery-mcp

./: CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TEST_INSTRUCTIONS.md  direct_bigquery_test.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  spec.md  test_bigquery.py  test_claude_desktop_complete.py  test_claude_desktop_final.sh  test_claude_desktop_information_schema.sh  test_claude_desktop_sequence.py  test_docker_env_vars.sh  test_docker_env_vars_override.sh  test_docker_stdio.py  test_env_vars_in_response.sh  test_fastmcp_env_vars.sh  test_project_region_config.py  test_projectid_response.sh  test_server.sh
src/mcp_bigquery_server/: __main__.py  cli.py  direct_stdio.py  env_utils.py  server.py  server_direct_stdio.py  server_fastmcp.py  server_fixed.py  server_new.py  test_client.py  utils.py
test_scripts/: test_claude_desktop.sh
tests/bigquery/: test_bigquery.py  test_bigquery_connection.py
tests/claude_desktop/: test_claude_desktop_env.sh  test_claude_desktop_query.sh  test_claude_desktop_tools_call.py
tests/config/: test_credentials_fix.sh  test_env_vars_direct.py  test_fastmcp_implementation.sh  test_improved_credentials.py  test_projectid_duplication.py  test_service_account.py
tests/docker/: test_docker_connection.py  test_docker_service_account.sh  test_docker_stdio.py
tests/information_schema/: test_information_schema.py  test_information_schema_access.py  test_information_schema_formats.py
tests/utils/: claude_simulator.py  test_claude_desktop.sh
